Set up monorepo

--- a/apps/extension/public/popup.html
+++ b/apps/extension/public/popup.html
@@ -15,6 +15,6 @@
   <body>
     <h2>Open Tabs / Windows</h2>
     <p id="openTabs"></p>
-    <script src="popup.js"></script>
+    <script src="src/popup.js"></script>
   </body>
 </html>
